<resources>
    <string name="app_name">CommunicateStudy</string>

    <!-- main -->
    <string name="main_title">Communicate Study</string>
    <string name="start_bt">start bluetooth</string>
    <string name="start_br">start broadcast</string>
    <string name="start_web">start web</string>
    <string name="start_service">start service</string>
    <string name="start_activity">start activity</string>
    <string name="start_fragment">start fragment</string>

    <!-- ComAct1,2 -->
    <string name="title_request">request</string>
    <string name="title_response">response</string>
    <string name="title_receive">receive</string>
    <string name="title_send">send</string>
    <string name="key_request_code">req code</string>
    <string name="key_res_code">res code</string>
    <string name="key_int">int</string>
    <string name="key_string">string</string>
    <string name="key_bundle">bundle</string>
    <string name="start">start</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
